log
Fri, Mar 21, 2025 10:33:40 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:40:51 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
6798b04
Fri, Mar 21, 2025 10:46:32 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9233018
Fri, Mar 21, 2025 11:00:49 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
exercises.c:95:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
ff2c488
Fri, Mar 21, 2025 11:11:50 PM: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:86:17: error: expected expression before '==' token
       if (dato* == elem) {
                 ^~
Compilation failed
bbb580a
Fri, Mar 21, 2025 11:16:36 PM: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  3|2
total_score: 40/70
6f387b5
Sat, Mar 22, 2025  4:14:09 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  4|1
total_score: 50/70
e87533f
Sat, Mar 22, 2025  4:46:17 PM: 
 exercises.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pila, caracter);
                     ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e248124
Sat, Mar 22, 2025  4:47:06 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18f21f7
Sat, Mar 22, 2025  4:49:14 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce8ca10
Sat, Mar 22, 2025  4:51:23 PM: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
8ec90b0
Sat, Mar 22, 2025  4:54:07 PM: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
326f4b3
Sat, Mar 22, 2025  5:08:03 PM: 
 exercises.c | 38 ++++++++++++++++++++++++--------------
 1 file changed, 24 insertions(+), 14 deletions(-)
 tests:  9|0
total_score: 70/70
d8b3c77
Sat, Mar 22, 2025  5:13:21 PM: 
 exercises.c | 40 +++++++++++++++++++---------------------
 1 file changed, 19 insertions(+), 21 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:130:29: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
            void *caracter = cadena[i];
                             ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
22e4184
Sat, Mar 22, 2025  5:13:42 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:130:13: error: 'caracter' undeclared (first use in this function)
            *caracter = cadena[i];
             ^~~~~~~~
exercises.c:130:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ef51899
Sat, Mar 22, 2025  5:14:36 PM: 
 exercises.c | 41 ++++++++++++++++++++++-------------------
 1 file changed, 22 insertions(+), 19 deletions(-)
 tests:  9|0
total_score: 70/70
f00b45f
